--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             srcset=""
             class="image"
           />
-          <span>Bin2Dec</span>
+          <span>Border Radius Previewer</span>
         </a>
       </div>
       <div class="card">
@@ -62,7 +62,7 @@
             srcset=""
             class="image"
           />
-          <span>Bin2Dec</span>
+          <span>Christmas Lights App</span>
         </a>
       </div>
     </section>
